какой-то успех в поиске релевантных чанков