@@ -9,6 +9,10 @@ import org.springframework.ai.embedding.EmbeddingResponse;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 
+import ru.cbgr.adapter.xwiki.mapper.DocumentEmbeddingMapper;
+import ru.cbgr.adapter.xwiki.model.DocumentEmbedding;
+import ru.cbgr.adapter.xwiki.model.dto.DocumentEmbeddingDto;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -23,15 +27,16 @@ public class SearchService {
 
     /**
      * Выполняет поиск по базе знаний.
-     * Преобразует поисковый запрос в эмбеддинг, затем находит наиболее похожие записи.
+     * Преобразует поисковый запрос в эмбеддинг, нормализует его, затем находит наиболее похожие записи.
      *
      * @param query текст поискового запроса
      * @param limit количество возвращаемых результатов
-     * @return список xwiki_absolute_url найденных страниц
+     * @return список DTO DocumentEmbeddingDto найденных документов с вычисленным расстоянием
      */
-    public List<String> search(String query, int limit) {
+    public List<DocumentEmbeddingDto> search(String query, int limit) {
         // Получаем эмбеддинг запроса через LlamaAiService
-        EmbeddingResponse embeddingResponse = llamaAiService.getEmbeddings(contentNormalizationService.normalize(query));
+        EmbeddingResponse embeddingResponse = llamaAiService.getEmbeddings(
+                contentNormalizationService.normalize(query));
         List<Embedding> embeddings = embeddingResponse.getResults();
         if (embeddings == null || embeddings.isEmpty()) {
             log.warn("Не удалось получить эмбеддинг для запроса: {}", query);
@@ -39,25 +44,73 @@ public class SearchService {
         }
 
         // Берем первый эмбеддинг (если их несколько)
-        List<Double> output = embeddings.getFirst().getOutput();
+        List<Double> output = embeddings.get(0).getOutput();
         float[] vector = new float[output.size()];
         for (int i = 0; i < output.size(); i++) {
             vector[i] = output.get(i).floatValue();
         }
-        PGvector queryVector = new PGvector(vector);
+        // Нормализуем вектор запроса
+        float[] normalizedVector = normalizeVector(vector);
+        PGvector queryVector = new PGvector(normalizedVector);
 
-        double threshold = 0.6; // Соответствует точности 0.8 (cosine similarity)
-        String sql = "SELECT xwiki_absolute_url FROM page_embeddings " +
-                "WHERE embedding <=> ? <= ? " +
-                "ORDER BY embedding <=> ? ASC " +
+        // SQL-запрос возвращает также вычисленное расстояние между векторами
+        String sql = "SELECT id, document_id, chunk_index, embedding, text_snippet, created_at, updated_at, " +
+                "       embedding <-> ? AS distance " +
+                "FROM document_embeddings " +
+                "ORDER BY distance ASC " +
                 "LIMIT ?";
 
-        List<String> results = jdbcTemplate.query(
+        List<DocumentEmbeddingDto> results = jdbcTemplate.query(
                 sql,
-                new Object[]{ queryVector, threshold, queryVector, limit },
-                (rs, rowNum) -> rs.getString("xwiki_absolute_url")
+                (rs, rowNum) -> {
+                    DocumentEmbedding entity = new DocumentEmbedding();
+                    entity.setId(rs.getLong("id"));
+                    entity.setDocumentId(rs.getString("document_id"));
+                    entity.setChunkIndex(rs.getInt("chunk_index"));
+
+                    // Получаем объект embedding и преобразуем его в PGvector
+                    Object embeddingObj = rs.getObject("embedding");
+                    PGvector embedding;
+                    if (embeddingObj instanceof PGvector) {
+                        embedding = (PGvector) embeddingObj;
+                    } else if (embeddingObj instanceof org.postgresql.util.PGobject pgObj) {
+                        embedding = new PGvector(pgObj.getValue());
+                    } else {
+                        throw new IllegalStateException("Невозможно преобразовать объект " + embeddingObj.getClass() + " в PGvector");
+                    }
+                    entity.setEmbedding(embedding);
+                    entity.setTextSnippet(rs.getString("text_snippet"));
+                    entity.setCreatedAt(rs.getTimestamp("created_at").toLocalDateTime());
+                    entity.setUpdatedAt(rs.getTimestamp("updated_at").toLocalDateTime());
+
+                    double distance = rs.getDouble("distance");
+                    log.info("Найден документ {} с расстоянием: {}", entity.getDocumentId(), distance);
+                    return DocumentEmbeddingMapper.toDtoWithDistance(entity, distance);
+                },
+                queryVector, limit
         );
 
         return results;
     }
+
+    /**
+     * Нормализует вектор, приводя его к единичной длине (L2-норма).
+     *
+     * @param vector исходный вектор
+     * @return нормализованный вектор
+     */
+    private float[] normalizeVector(float[] vector) {
+        double sum = 0.0;
+        for (float v : vector) {
+            sum += v * v;
+        }
+        double norm = Math.sqrt(sum);
+        if (norm == 0) return vector; // Предотвращаем деление на ноль
+        float[] normalized = new float[vector.length];
+        for (int i = 0; i < vector.length; i++) {
+            normalized[i] = vector[i] / (float) norm;
+        }
+        return normalized;
+    }
+
 }
